# projectZERO

./: CMakeLists.txt  README.md
build_jetson/: CMakeCache.txt  Makefile  cmake_install.cmake  projectZERO
build_mac/: CMakeCache.txt  cmake_install.cmake
build_mac/CMakeScripts/: ReRunCMake.make
build_mac/Debug/: projectZERO
build_mac/Release/: projectZERO
build_mac/projectZERO.xcodeproj/: project.pbxproj
build_mac/projectZERO.xcodeproj/project.xcworkspace/xcuserdata/mraphaelsaeed.xcuserdatad/: UserInterfaceState.xcuserstate
build_mac/projectZERO.xcodeproj/xcshareddata/xcschemes/: projectZERO.xcscheme
build_mac/projectZERO.xcodeproj/xcuserdata/mraphaelsaeed.xcuserdatad/xcschemes/: xcschememanagement.plist
cmake/: enum_common_hdr.cmake  enum_project_hdr.cmake  enum_project_src.cmake
common/: CrTypes.h
hpc/cmake/: enum_hpc_hdr.cmake  enum_hpc_src.cmake
hpc/src/: hpc.cpp
src/: pp  projectZERO.cpp  text.cpp
